force-app/main/default/objects/FleetXJob__c/FleetXJob__c.object-meta.xml
<CustomObject>
    <label>FleetXJobs</label>
    <nameField>
        <displayFormat>FL-{000000}</displayFormat>
        <label>FleetXJobSFid</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FleetXJobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>