force-app/main/default/objects/FleetXJob__c/fields/jobLoadingStatus__c.field-meta.xml
<CustomField>
    <fullName>jobLoadingStatus__c</fullName>
    <label>jobLoadingStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>