force-app/main/default/objects/FleetXJob__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Job Name in FLEETX</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>