force-app/main/default/objects/FleetXJob__c/fields/route_id__c.field-meta.xml
<CustomField>
    <fullName>route_id__c</fullName>
    <label>route_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>